log
Sat Apr 23 02:50:39 UTC 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
e903cba
Sat Apr 23 02:51:11 UTC 2022: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
552d9e5
Sat Apr 23 02:51:46 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
f9732ca
Sat Apr 23 03:04:58 UTC 2022: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux;
            ^~~
cc1: all warnings being treated as errors
Compilation failed
e4816bd
Sat Apr 23 03:05:06 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eefd32a
Sat Apr 23 03:05:17 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
c360d7d
Sat Apr 23 03:06:35 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2a1fe75
Sat Apr 23 03:08:48 UTC 2022: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
de70b41
Sat Apr 23 03:08:53 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
f55c93f
Sat Apr 23 03:09:06 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
68086a2
Sat Apr 23 22:08:53 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
7cc0077
Sat Apr 23 22:18:23 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
3550172
Sat Apr 23 22:18:32 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
a0fa1db
Sat Apr 23 22:18:51 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
9e16feb
Sat Apr 23 22:19:12 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
053660f
Sat Apr 23 22:35:46 UTC 2022: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  11|6
total_score: 15/70
7b5c2d0
Sat Apr 23 22:36:19 UTC 2022: 
 treemap.c | 26 ++++++++++++++------------
 1 file changed, 14 insertions(+), 12 deletions(-)
 tests:  13|5
total_score: 25/70
ec0f386
Sat Apr 23 22:37:16 UTC 2022: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  13|5
total_score: 25/70
c932444
Sat Apr 23 22:37:39 UTC 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
727107c
Sat Apr 23 22:37:46 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
5353fc9
Sat Apr 23 22:38:17 UTC 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
e60c36b
Sat Apr 23 22:38:40 UTC 2022: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
138a488
Sat Apr 23 22:39:25 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 15/70
549ddeb
Sat Apr 23 22:39:31 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
0e06684
Sat Apr 23 22:42:45 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
ea4748d
Sat Apr 23 22:57:16 UTC 2022: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
f49e66e
Mon Apr 25 02:51:45 UTC 2022: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  19|3
total_score: 35/70
14b82db
Mon Apr 25 03:13:04 UTC 2022: 
 treemap.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘upperBound’:
treemap.c:126:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if( (upper==NULL || tree->lower_than(aux->pair->key, upper->pair->key)) && !tree->lower_than(aux->pair->key,key))
   ^~
treemap.c:128:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
     if (tree->lower_than(key, aux->pair->key)) {
     ^~
cc1: all warnings being treated as errors
Compilation failed
feeacc7
Mon Apr 25 03:16:48 UTC 2022: 
 treemap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘upperBound’:
treemap.c:126:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if( (upper==NULL || tree->lower_than(aux->pair->key, upper->pair->key)) && !tree->lower_than(aux->pair->key,key))
   ^~
treemap.c:128:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
     if (tree->lower_than(key, aux->pair->key)) {
     ^~
cc1: all warnings being treated as errors
Compilation failed
acd74d4
